# rou2exOS

./: Cargo.toml  Makefile  x86_64-r2.json
.cargo/: config.toml
src/: multiboot2.rs
src/bootinfo/: cmdline.rs  mod.rs
src/init/: check.rs  fs.rs  heap.rs  idt.rs  pit.rs
src/init/multiboot2/: header.rs  mod.rs  tags.rs
src/init/multiboot2/parser/: cmd.rs  main_parser.rs  mmap.rs  mod.rs  module.rs
src/mem/: memorymap.rs  mod.rs
