[package]
name = "kernel"
description = ""
version = "0.9.6"
edition = "2021"
authors = ["krusty <krusty@vxn.dev>"]

[dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
spin = "0.10.0"


[features]
kernel_text = []
kernel_graphics = []


[profile.dev]
panic = "abort"
debug = true
opt-level = 0
lto = false


[profile.release]
lto = false
panic = "abort"
debug = 2




[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false
